@@ -3640,10 +3640,10 @@ return|return
 literal|"long"
 return|;
 case|case
-literal|'L'
+literal|'T'
 case|:
 block|{
-comment|// Full class name
+comment|// TypeVariableSignature
 name|int
 name|index
 init|=
@@ -3682,6 +3682,91 @@ operator|+
 literal|1
 argument_list|)
 expr_stmt|;
+comment|// "Tblabla;" `T' and `;' are removed
+return|return
+name|compactClassName
+argument_list|(
+name|signature
+operator|.
+name|substring
+argument_list|(
+literal|1
+argument_list|,
+name|index
+argument_list|)
+argument_list|,
+name|chopit
+argument_list|)
+return|;
+block|}
+case|case
+literal|'L'
+case|:
+block|{
+comment|// Full class name
+name|int
+name|index
+init|=
+name|signature
+operator|.
+name|indexOf
+argument_list|(
+literal|';'
+argument_list|)
+decl_stmt|;
+comment|// Look for closing `;'
+if|if
+condition|(
+name|index
+operator|<
+literal|0
+condition|)
+block|{
+throw|throw
+operator|new
+name|ClassFormatException
+argument_list|(
+literal|"Invalid signature: "
+operator|+
+name|signature
+argument_list|)
+throw|;
+block|}
+comment|// check to see if there are any TypeArguments
+name|int
+name|bracketIndex
+init|=
+name|signature
+operator|.
+name|substring
+argument_list|(
+literal|0
+argument_list|,
+name|index
+argument_list|)
+operator|.
+name|indexOf
+argument_list|(
+literal|'<'
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|bracketIndex
+operator|<
+literal|0
+condition|)
+block|{
+comment|// just a class identifier
+name|wrap
+argument_list|(
+name|consumed_chars
+argument_list|,
+name|index
+operator|+
+literal|1
+argument_list|)
+expr_stmt|;
 comment|// "Lblabla;" `L' and `;' are removed
 return|return
 name|compactClassName
@@ -3697,6 +3782,296 @@ argument_list|)
 argument_list|,
 name|chopit
 argument_list|)
+return|;
+block|}
+comment|// we have TypeArguments; build up partial result
+comment|// as we recurse for each TypeArgument
+name|String
+name|type
+init|=
+name|compactClassName
+argument_list|(
+name|signature
+operator|.
+name|substring
+argument_list|(
+literal|1
+argument_list|,
+name|bracketIndex
+argument_list|)
+argument_list|,
+name|chopit
+argument_list|)
+operator|+
+literal|"<"
+decl_stmt|;
+name|int
+name|consumed_chars
+init|=
+name|bracketIndex
+operator|+
+literal|1
+decl_stmt|;
+comment|// Shadows global var
+comment|// check for wildcards
+if|if
+condition|(
+name|signature
+operator|.
+name|charAt
+argument_list|(
+name|consumed_chars
+argument_list|)
+operator|==
+literal|'+'
+condition|)
+block|{
+name|type
+operator|=
+name|type
+operator|+
+literal|"? extends "
+expr_stmt|;
+name|consumed_chars
+operator|=
+operator|++
+name|consumed_chars
+expr_stmt|;
+block|}
+if|else if
+condition|(
+name|signature
+operator|.
+name|charAt
+argument_list|(
+name|consumed_chars
+argument_list|)
+operator|==
+literal|'-'
+condition|)
+block|{
+name|type
+operator|=
+name|type
+operator|+
+literal|"? super "
+expr_stmt|;
+name|consumed_chars
+operator|=
+operator|++
+name|consumed_chars
+expr_stmt|;
+block|}
+if|else if
+condition|(
+name|signature
+operator|.
+name|charAt
+argument_list|(
+name|consumed_chars
+argument_list|)
+operator|==
+literal|'*'
+condition|)
+block|{
+comment|// must be at end of signature
+if|if
+condition|(
+name|signature
+operator|.
+name|charAt
+argument_list|(
+name|consumed_chars
+operator|+
+literal|1
+argument_list|)
+operator|!=
+literal|'>'
+condition|)
+block|{
+throw|throw
+operator|new
+name|ClassFormatException
+argument_list|(
+literal|"Invalid signature: "
+operator|+
+name|signature
+argument_list|)
+throw|;
+block|}
+if|if
+condition|(
+name|signature
+operator|.
+name|charAt
+argument_list|(
+name|consumed_chars
+operator|+
+literal|2
+argument_list|)
+operator|!=
+literal|';'
+condition|)
+block|{
+throw|throw
+operator|new
+name|ClassFormatException
+argument_list|(
+literal|"Invalid signature: "
+operator|+
+name|signature
+argument_list|)
+throw|;
+block|}
+name|wrap
+argument_list|(
+name|Utility
+operator|.
+name|consumed_chars
+argument_list|,
+name|consumed_chars
+operator|+
+literal|3
+argument_list|)
+expr_stmt|;
+comment|// remove final "*>;"
+return|return
+name|type
+operator|+
+literal|"?>..."
+return|;
+block|}
+comment|// get the first TypeArgument
+name|type
+operator|=
+name|type
+operator|+
+name|signatureToString
+argument_list|(
+name|signature
+operator|.
+name|substring
+argument_list|(
+name|consumed_chars
+argument_list|)
+argument_list|,
+name|chopit
+argument_list|)
+expr_stmt|;
+comment|// update our consumed count by the number of characters the for type argument
+name|consumed_chars
+operator|=
+name|unwrap
+argument_list|(
+name|Utility
+operator|.
+name|consumed_chars
+argument_list|)
+operator|+
+name|consumed_chars
+expr_stmt|;
+name|wrap
+argument_list|(
+name|Utility
+operator|.
+name|consumed_chars
+argument_list|,
+name|consumed_chars
+argument_list|)
+expr_stmt|;
+comment|// are there more TypeArguments?
+while|while
+condition|(
+name|signature
+operator|.
+name|charAt
+argument_list|(
+name|consumed_chars
+argument_list|)
+operator|!=
+literal|'>'
+condition|)
+block|{
+name|type
+operator|=
+name|type
+operator|+
+literal|", "
+operator|+
+name|signatureToString
+argument_list|(
+name|signature
+operator|.
+name|substring
+argument_list|(
+name|consumed_chars
+argument_list|)
+argument_list|,
+name|chopit
+argument_list|)
+expr_stmt|;
+comment|// update our consumed count by the number of characters the for type argument
+name|consumed_chars
+operator|=
+name|unwrap
+argument_list|(
+name|Utility
+operator|.
+name|consumed_chars
+argument_list|)
+operator|+
+name|consumed_chars
+expr_stmt|;
+name|wrap
+argument_list|(
+name|Utility
+operator|.
+name|consumed_chars
+argument_list|,
+name|consumed_chars
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|signature
+operator|.
+name|charAt
+argument_list|(
+name|consumed_chars
+operator|+
+literal|1
+argument_list|)
+operator|!=
+literal|';'
+condition|)
+block|{
+throw|throw
+operator|new
+name|ClassFormatException
+argument_list|(
+literal|"Invalid signature: "
+operator|+
+name|signature
+argument_list|)
+throw|;
+block|}
+name|wrap
+argument_list|(
+name|Utility
+operator|.
+name|consumed_chars
+argument_list|,
+name|consumed_chars
+operator|+
+literal|2
+argument_list|)
+expr_stmt|;
+comment|// remove final ">;"
+return|return
+name|type
+operator|+
+literal|">"
 return|;
 block|}
 case|case
