@@ -1,0 +1,89 @@
+begin_unit|revision:1.0.0;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *   http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+
+begin_package
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|bcel
+operator|.
+name|classfile
+package|;
+end_package
+
+begin_import
+import|import
+name|junit
+operator|.
+name|framework
+operator|.
+name|TestCase
+import|;
+end_import
+
+begin_class
+specifier|public
+class|class
+name|UtilityTestCase
+extends|extends
+name|TestCase
+block|{
+specifier|public
+name|void
+name|testSignatureToStringWithGenerics
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertEquals
+argument_list|(
+literal|"generic signature"
+argument_list|,
+literal|"java.util.Map<X, java.util.List<Y>>"
+argument_list|,
+name|Utility
+operator|.
+name|signatureToString
+argument_list|(
+literal|"Ljava/util/Map<TX;Ljava/util/List<TY;>;>;"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"generic signature"
+argument_list|,
+literal|"java.util.Set<? extends java.nio.file.OpenOption>"
+argument_list|,
+name|Utility
+operator|.
+name|signatureToString
+argument_list|(
+literal|"Ljava/util/Set<+Ljava/nio/file/OpenOption;>;"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"generic signature"
+argument_list|,
+literal|"java.nio.file.attribute.FileAttribute<?>...[]"
+argument_list|,
+name|Utility
+operator|.
+name|signatureToString
+argument_list|(
+literal|"[Ljava/nio/file/attribute/FileAttribute<*>;"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+end_class
+
+end_unit
+
